--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.832.0",
     "@icons-pack/react-simple-icons": "^12.8.0",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-label": "^2.1.6",
