--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "animejs": "^4.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-sitemap": "^4.2.3",
@@ -28,6 +30,7 @@
     "react-dom": "^19.0.0",
     "react-google-recaptcha-v3": "^1.11.0",
     "react-plock": "^3.5.1",
+    "sharp": "^0.34.2",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
