--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "15.3.2",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
+    "pocketbase": "^0.26.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha-v3": "^1.11.0",
