--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-google-recaptcha-v3": "^1.11.0",
     "react-plock": "^3.5.1",
     "sharp": "^0.34.2",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
