--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.83.0",
     "@types/jsonwebtoken": "^9.0.10",
     "animejs": "^4.0.2",
     "class-variance-authority": "^0.7.1",
