--- a/package.json
+++ b/package.json
@@ -1,55 +1,75 @@
 {
-  "name": "vest-visuals",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "postbuild": "next-sitemap",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.832.0",
-    "@icons-pack/react-simple-icons": "^12.8.0",
-    "@radix-ui/react-accordion": "^1.2.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@tanstack/react-query": "^5.83.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "animejs": "^4.0.2",
-    "axios": "^1.10.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "embla-carousel-react": "^8.6.0",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.511.0",
-    "next": "15.3.2",
-    "next-sitemap": "^4.2.3",
-    "next-themes": "^0.4.6",
-    "pocketbase": "^0.26.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-google-recaptcha-v3": "^1.11.0",
-    "react-plock": "^3.5.1",
-    "sharp": "^0.34.2",
-    "tailwind-merge": "^3.3.0",
-    "uuid": "^11.1.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/uuid": "^10.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.0",
-    "typescript": "^5"
-  }
+    "name": "vest-visuals",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "postbuild": "next-sitemap",
+        "start": "next start",
+        "lint": "next lint",
+        
+        "db:update": "dotenvx run -f .env.local -- run-s drizzle:push",
+        "db:start": "docker compose up -d",
+        "db:wait": "wait-on tcp:8080",
+        "db:stop": "docker compose down",
+
+        "drizzle:push": "drizzle-kit push",
+        "drizzle:generate": "drizzle-kit generate",
+        "drizzle:migrate": "drizzle-kit migrate",
+
+        "auth:generate": "cli generate --config=./better-auth.config.ts --output=./src/lib/server/db/schema/auth.ts",
+        "auth:migrate": "cli migrate --config=./better-auth.config.ts"
+    },
+    "dependencies": {
+        "@aws-sdk/client-s3": "^3.832.0",
+        "@icons-pack/react-simple-icons": "^12.8.0",
+        "@libsql/client": "^0.15.12",
+        "@radix-ui/react-accordion": "^1.2.10",
+        "@radix-ui/react-checkbox": "^1.3.2",
+        "@radix-ui/react-dialog": "^1.1.14",
+        "@radix-ui/react-label": "^2.1.6",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@tanstack/react-query": "^5.83.0",
+        "@types/jsonwebtoken": "^9.0.10",
+        "animejs": "^4.0.2",
+        "axios": "^1.10.0",
+        "better-auth": "^1.3.7",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "drizzle-orm": "^0.44.4",
+        "embla-carousel-react": "^8.6.0",
+        "jsonwebtoken": "^9.0.2",
+        "lucide-react": "^0.511.0",
+        "next": "15.3.2",
+        "next-sitemap": "^4.2.3",
+        "next-themes": "^0.4.6",
+        "pocketbase": "^0.26.1",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-google-recaptcha-v3": "^1.11.0",
+        "react-plock": "^3.5.1",
+        "sharp": "^0.34.2",
+        "tailwind-merge": "^3.3.0",
+        "uuid": "^11.1.0"
+    },
+    "devDependencies": {
+        "@better-auth/cli": "^1.3.7",
+        "@dotenvx/dotenvx": "^1.49.0",
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "@types/uuid": "^10.0.0",
+        "drizzle-kit": "^0.31.4",
+        "eslint": "^9",
+        "eslint-config-next": "15.3.2",
+        "npm-run-all2": "^8.0.4",
+        "tailwindcss": "^4",
+        "tw-animate-css": "^1.3.0",
+        "typescript": "^5",
+        "wait-on": "^8.0.4"
+    }
 }
