--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ S3_CONSOLE_URL=
 S3_ACCESS_KEY=
 S3_SECRET_KEY=
 POCKETBASE_URL=
-DB_URL=
+LIBSQL_URL=
+LIBSQL_AUTH=
 BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=
