--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@aws-sdk/client-s3": "^3.832.0",
         "@icons-pack/react-simple-icons": "^12.8.0",
         "@libsql/client": "^0.15.12",
+        "@paralleldrive/cuid2": "^2.2.2",
         "@radix-ui/react-accordion": "^1.2.10",
         "@radix-ui/react-checkbox": "^1.3.2",
         "@radix-ui/react-dialog": "^1.1.14",
