--- a/components.json
+++ b/components.json
@@ -1,21 +1,21 @@
 {
-  "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "new-york",
-  "rsc": true,
-  "tsx": true,
-  "tailwind": {
-    "config": "",
-    "css": "src/app/globals.css",
-    "baseColor": "slate",
-    "cssVariables": true,
-    "prefix": ""
-  },
-  "aliases": {
-    "components": "@/components",
-    "utils": "@/utils/shadcn/lib/utils",
-    "ui": "@/components/ui",
-    "lib": "@/utils/shadcn/lib",
-    "hooks": "@/utils/shadcn/hooks"
-  },
-  "iconLibrary": "lucide"
+    "$schema": "https://ui.shadcn.com/schema.json",
+    "style": "new-york",
+    "rsc": true,
+    "tsx": true,
+    "tailwind": {
+        "config": "",
+        "css": "src/app/globals.css",
+        "baseColor": "slate",
+        "cssVariables": true,
+        "prefix": ""
+    },
+    "aliases": {
+        "components": "@/components",
+        "utils": "@shared/shadcn/lib/utils",
+        "ui": "@/components/ui",
+        "lib": "@shared/shadcn/lib",
+        "hooks": "@shared/shadcn/hooks"
+    },
+    "iconLibrary": "lucide"
 }
