--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ LIBSQL_URL=
 LIBSQL_AUTH=
 BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_SENDER_NAME=
+SMTP_SENDER_ADDRESS=
