--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@tanstack/react-query": "^5.83.0",
         "@types/jsonwebtoken": "^9.0.10",
+        "@types/nodemailer": "^7.0.1",
         "animejs": "^4.0.2",
         "axios": "^1.10.0",
         "better-auth": "^1.3.7",
@@ -43,6 +44,7 @@
         "next": "15.3.2",
         "next-sitemap": "^4.2.3",
         "next-themes": "^0.4.6",
+        "nodemailer": "^7.0.5",
         "pocketbase": "^0.26.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
