--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "better-auth": "^1.3.7",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "commander": "^14.0.0",
         "drizzle-orm": "^0.44.4",
         "embla-carousel-react": "^8.6.0",
         "jsonwebtoken": "^9.0.2",
@@ -51,6 +52,7 @@
         "react-google-recaptcha-v3": "^1.11.0",
         "react-plock": "^3.5.1",
         "sharp": "^0.34.2",
+        "string-argv": "^0.3.2",
         "tailwind-merge": "^3.3.0",
         "uuid": "^11.1.0"
     },
