--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "commander": "^14.0.0",
         "drizzle-orm": "^0.44.4",
         "embla-carousel-react": "^8.6.0",
+        "input-otp": "^1.4.2",
         "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.511.0",
         "next": "15.3.2",
