refactor: added platform to minio service, minor improvements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  db:
+  libsql:
     image: ghcr.io/tursodatabase/libsql-server:latest
     platform: linux/amd64
     ports:
@@ -9,11 +9,12 @@ services:
       - ./.data/libsql:/var/lib/sqld
   minio:
     image: bitnami/minio:2025.4.22
+    platform: linux/amd64
     ports:
       - "9000:9000"
       - "9001:9001"
     volumes:
-      - "./minio_data:/data"
+      - ./.data/minio:/data
     environment:
       - MINIO_ROOT_USER=console
       - MINIO_ROOT_PASSWORD=console1234!
