--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./.data/libsql:/var/lib/sqld
     environment:
-      - SQLD_HTTP_LISTEN_ADDR=127.0.0.1:8080
+      - SQLD_HTTP_LISTEN_ADDR=0.0.0.0:8080
       - SQLD_HTTP_AUTH=basic:Y29uc29sZTpjb25zb2xlMTIzNCE=
   minio:
     image: bitnami/minio:2025.4.22
