refactor: fix db related scripts

--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
         "postbuild": "next-sitemap",
         "start": "next start",
         "lint": "next lint",
-        "db:update": "dotenvx run -f .env.local -- run-s drizzle:push",
-        "db:start": "docker compose up -d",
-        "db:wait": "wait-on tcp:8080",
-        "db:stop": "docker compose down",
+        "db:generate": "dotenvx run -f .env.local -- run-s auth:generate",
+        "db:migrate": "dotenvx run -f .env.local -- run-s drizzle:generate drizzle:migrate",
+        "db:push": "dotenvx run -f .env.local -- run-s drizzle:push",
         "drizzle:push": "drizzle-kit push",
         "drizzle:generate": "drizzle-kit generate",
         "drizzle:migrate": "drizzle-kit migrate",
-        "auth:generate": "cli generate --config=./better-auth.config.ts --output=./src/lib/server/db/schema/auth.ts",
-        "auth:migrate": "cli migrate --config=./better-auth.config.ts"
+        "auth:generate": "cli generate --config=./better-auth.config.ts --output=./src/lib/server/db/schema/auth.ts --yes",
+        "auth:migrate": "cli migrate --config=./better-auth.config.ts --yes"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.832.0",
