--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
         "@tanstack/react-query": "^5.83.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/nodemailer": "^7.0.1",
+        "@uiw/codemirror-extensions-langs": "^4.25.2",
+        "@uiw/codemirror-themes": "^4.25.2",
+        "@uiw/codemirror-themes-all": "^4.25.2",
+        "@uiw/react-codemirror": "^4.25.2",
         "animejs": "^4.0.2",
         "axios": "^1.10.0",
         "better-auth": "^1.3.7",
