--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "react-google-recaptcha-v3": "^1.11.0",
         "react-plock": "^3.5.1",
         "sharp": "^0.34.2",
+        "sonner": "^2.0.7",
         "string-argv": "^0.3.2",
         "tailwind-merge": "^3.3.0",
         "uuid": "^11.1.0"
