--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
         "sonner": "^2.0.7",
         "string-argv": "^0.3.2",
         "tailwind-merge": "^3.3.0",
-        "uuid": "^11.1.0"
+        "uuid": "^11.1.0",
+        "zod": "^4.1.11"
     },
     "devDependencies": {
         "@better-auth/cli": "^1.3.7",
