--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.832.0",
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/sortable": "^10.0.0",
         "@icons-pack/react-simple-icons": "^12.8.0",
         "@libsql/client": "^0.15.12",
         "@paralleldrive/cuid2": "^2.2.2",
