--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - SQLD_HTTP_LISTEN_ADDR=0.0.0.0:8080
       - SQLD_HTTP_AUTH=basic:Y29uc29sZTpjb25zb2xlMTIzNCE=
   minio:
-    image: bitnami/minio:2025.4.22
+    image: muscaa/minio:latest
     platform: linux/amd64
     ports:
       - "9000:9000"
