--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/sortable": "^10.0.0",
         "@icons-pack/react-simple-icons": "^12.8.0",
-        "@libsql/client": "^0.15.12",
+        "@libsql/client": "^0.17.0",
         "@paralleldrive/cuid2": "^2.2.2",
         "@radix-ui/react-accordion": "^1.2.10",
         "@radix-ui/react-avatar": "^1.1.10",
@@ -47,21 +47,21 @@
         "@uiw/react-codemirror": "^4.25.2",
         "animejs": "^4.0.2",
         "axios": "^1.10.0",
-        "better-auth": "^1.3.7",
+        "better-auth": "^1.4.15",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "commander": "^14.0.0",
-        "drizzle-orm": "^0.44.4",
+        "drizzle-orm": "^0.45.1",
         "embla-carousel-react": "^8.6.0",
         "input-otp": "^1.4.2",
         "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.511.0",
-        "next": "15.3.2",
+        "next": "^16.1.3",
         "next-sitemap": "^4.2.3",
         "next-themes": "^0.4.6",
-        "nodemailer": "^7.0.5",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
+        "nodemailer": "^7.0.12",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
         "react-google-recaptcha-v3": "^1.11.0",
         "sharp": "^0.34.2",
         "sonner": "^2.0.7",
@@ -71,15 +71,15 @@
         "zod": "^4.1.11"
     },
     "devDependencies": {
-        "@better-auth/cli": "^1.3.7",
+        "@better-auth/cli": "^1.4.15",
         "@dotenvx/dotenvx": "^1.49.0",
         "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4",
-        "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
+        "@types/node": "^25.0.9",
+        "@types/react": "^19.2.8",
+        "@types/react-dom": "^19.2.3",
         "@types/uuid": "^10.0.0",
-        "drizzle-kit": "^0.31.4",
+        "drizzle-kit": "^0.31.8",
         "eslint": "^9",
         "eslint-config-next": "15.3.2",
         "npm-run-all2": "^8.0.4",
