--- a/components.json
+++ b/components.json
@@ -1,21 +1,24 @@
 {
     "$schema": "https://ui.shadcn.com/schema.json",
-    "style": "new-york",
+    "style": "base-maia",
     "rsc": true,
     "tsx": true,
     "tailwind": {
         "config": "",
         "css": "src/styles/theme.css",
-        "baseColor": "slate",
+        "baseColor": "zinc",
         "cssVariables": true,
         "prefix": ""
     },
+    "iconLibrary": "lucide",
     "aliases": {
         "components": "@/components",
         "utils": "@shared/shadcn/lib/utils",
         "ui": "@/components/ui",
         "lib": "@shared/shadcn/lib",
-        "hooks": "@shared/shadcn/hooks"
+        "hooks": "@client/shadcn/hooks"
     },
-    "iconLibrary": "lucide"
+    "menuColor": "default",
+    "menuAccent": "subtle",
+    "registries": {}
 }
