--- a/package.json
+++ b/package.json
@@ -19,25 +19,12 @@
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.832.0",
+        "@base-ui/react": "^1.1.0",
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/sortable": "^10.0.0",
-        "@icons-pack/react-simple-icons": "^12.8.0",
+        "@icons-pack/react-simple-icons": "^13.8.0",
         "@libsql/client": "^0.17.0",
         "@paralleldrive/cuid2": "^2.2.2",
-        "@radix-ui/react-accordion": "^1.2.10",
-        "@radix-ui/react-avatar": "^1.1.10",
-        "@radix-ui/react-checkbox": "^1.3.2",
-        "@radix-ui/react-collapsible": "^1.1.12",
-        "@radix-ui/react-dialog": "^1.1.15",
-        "@radix-ui/react-dropdown-menu": "^2.1.16",
-        "@radix-ui/react-label": "^2.1.6",
-        "@radix-ui/react-progress": "^1.1.7",
-        "@radix-ui/react-select": "^2.2.6",
-        "@radix-ui/react-separator": "^1.1.7",
-        "@radix-ui/react-slot": "^1.2.3",
-        "@radix-ui/react-toggle": "^1.1.10",
-        "@radix-ui/react-toggle-group": "^1.1.11",
-        "@radix-ui/react-tooltip": "^1.2.8",
         "@tanstack/react-query": "^5.83.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/nodemailer": "^7.0.1",
@@ -54,7 +41,7 @@
         "embla-carousel-react": "^8.6.0",
         "input-otp": "^1.4.2",
         "jsonwebtoken": "^9.0.2",
-        "lucide-react": "^0.511.0",
+        "lucide-react": "^0.563.0",
         "next": "^16.1.3",
         "next-sitemap": "^4.2.3",
         "next-themes": "^0.4.6",
@@ -62,10 +49,12 @@
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
         "react-google-recaptcha-v3": "^1.11.0",
+        "shadcn": "^3.7.0",
         "sharp": "^0.34.2",
         "sonner": "^2.0.7",
         "string-argv": "^0.3.2",
-        "tailwind-merge": "^3.3.0",
+        "tailwind-merge": "^3.4.0",
+        "tw-animate-css": "^1.4.0",
         "uuid": "^11.1.0",
         "zod": "^4.1.11"
     },
@@ -83,7 +72,6 @@
         "eslint-config-next": "15.3.2",
         "npm-run-all2": "^8.0.4",
         "tailwindcss": "^4",
-        "tw-animate-css": "^1.3.0",
         "typescript": "^5",
         "wait-on": "^8.0.4"
     }
