--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.563.0",
         "next": "^16.1.3",
+        "next-intl": "^4.8.2",
         "next-sitemap": "^4.2.3",
         "next-themes": "^0.4.6",
         "nodemailer": "^7.0.12",
