--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@tanstack/react-query": "^5.83.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/nodemailer": "^7.0.1",
+        "@uidotdev/usehooks": "^2.4.1",
         "@uiw/codemirror-extensions-langs": "^4.25.2",
         "@uiw/codemirror-themes": "^4.25.2",
         "@uiw/codemirror-themes-all": "^4.25.2",
@@ -62,15 +63,15 @@
     "devDependencies": {
         "@better-auth/cli": "^1.4.15",
         "@dotenvx/dotenvx": "^1.49.0",
-        "@eslint/eslintrc": "^3",
+        "@eslint/eslintrc": "^0.1.0",
         "@tailwindcss/postcss": "^4",
         "@types/node": "^25.0.9",
         "@types/react": "^19.2.8",
         "@types/react-dom": "^19.2.3",
         "@types/uuid": "^10.0.0",
-        "drizzle-kit": "^0.31.8",
-        "eslint": "^9",
-        "eslint-config-next": "15.3.2",
+        "drizzle-kit": "^0.31.9",
+        "eslint": "^10.0.1",
+        "eslint-config-next": "^0.2.4",
         "npm-run-all2": "^8.0.4",
         "tailwindcss": "^4",
         "typescript": "^5",
