--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.832.0",
         "@base-ui/react": "^1.1.0",
+        "@beautiful-qr-code/react": "^1.0.9",
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/sortable": "^10.0.0",
         "@icons-pack/react-simple-icons": "^13.8.0",
