--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "auth:migrate": "cli migrate --config=./better-auth.config.ts --yes"
     },
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.832.0",
+        "@aws-sdk/client-s3": "^3.997.0",
+        "@aws-sdk/s3-request-presigner": "^3.997.0",
         "@base-ui/react": "^1.1.0",
         "@beautiful-qr-code/react": "^1.0.9",
         "@dnd-kit/core": "^6.3.1",
