--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "commander": "^14.0.0",
+        "date-fns": "^4.1.0",
         "drizzle-orm": "^0.45.1",
         "embla-carousel-react": "^8.6.0",
         "input-otp": "^1.4.2",
@@ -51,6 +52,7 @@
         "next-themes": "^0.4.6",
         "nodemailer": "^7.0.12",
         "react": "^19.2.3",
+        "react-day-picker": "^9.14.0",
         "react-dom": "^19.2.3",
         "react-google-recaptcha-v3": "^1.11.0",
         "shadcn": "^3.7.0",
